--- a/tools/build-tool/data/android/integrated/app/build.gradle
+++ b/tools/build-tool/data/android/integrated/app/build.gradle
@@ -5,6 +5,10 @@ android {
     buildToolsVersion "${ANDROID_BUILD_TOOLS_VERSION}"
 
     defaultConfig {
+        sourceSets.main {
+            jniLibs.srcDir 'src/main/libs'
+            jni.srcDirs = [] //disable automatic ndk-build call
+        }
         applicationId "${QUALIFIED_NAME}"
         minSdkVersion    ${ANDROID_MIN_SDK_VERSION}
         targetSdkVersion ${ANDROID_TARGET_SDK_VERSION}
